--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
   "name": "threadsfix",
   "version": "1.0.0",
+  "main": "index.ts",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
+    "start": "tsx ./src/index.ts",
+    "dev": "tsx --watch ./src/index.ts",
     "cloudflare": "cloudflared tunnel --config ./cloudflare.yaml run"
   },
   "dependencies": {
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
-    "next": "13.4.10",
-    "next-seo": "^6.1.0",
-    "node-html-parser": "^6.1.5",
-    "postcss": "8.4.26",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
-  }
+    "cloudflare-express": "^1.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-rate-limit": "6.7.1",
+    "gts": "^3.1.1",
+    "node-fetch": "^3.3.1",
+    "node-html-parser": "^6.1.5"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "tsx": "^3.12.7",
+    "typescript": "^5.1.6"
+  },
+  "typeRoots": [
+    "./node_modules/@types",
+    "./src/types"
+  ]
 }
