--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fixthreads",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "main": "index.ts",
   "scripts": {
     "start": "tsx ./src/index.ts",
@@ -14,8 +14,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "6.9.0",
     "gts": "^5.0.0",
-    "node-fetch": "^3.3.2",
-    "node-html-parser": "^6.1.5"
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
