--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "tsx": "^3.12.7",
+    "tsx": "4.0.0",
     "typescript": "^5.1.6"
   },
   "typeRoots": [
