--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "express": "^4.17.1",
     "express-rate-limit": "7.1.4",
     "gts": "^5.0.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "tsx": "4.1.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "tsx": "4.1.1",
     "typescript": "^5.1.6"
   },
   "typeRoots": [
