bug fix for non-escaped HTML

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fixthreads",
-  "version": "1.7.2",
+  "version": "1.7.3",
   "main": "index.ts",
   "scripts": {
     "start": "tsx ./src/index.ts",
@@ -11,6 +11,7 @@
     "cloudflare-express": "^1.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "escape-html": "^1.0.3",
     "express": "^4.17.1",
     "express-rate-limit": "7.4.0",
     "gts": "^5.0.0",
@@ -20,7 +21,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "@types/escape-html": "^1.0.4"
   },
   "typeRoots": [
     "./node_modules/@types",
