--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "express": "^4.17.1",
     "express-rate-limit": "7.4.0",
     "gts": "^5.0.0",
+    "instagram-private-api": "^1.46.1",
     "node-fetch": "^3.3.2",
     "tsx": "4.16.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
+    "@types/escape-html": "^1.0.4",
     "@types/express": "^4.17.17",
-    "typescript": "^5.1.6",
-    "@types/escape-html": "^1.0.4"
+    "typescript": "^5.1.6"
   },
   "typeRoots": [
     "./node_modules/@types",
