--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "escape-html": "^1.0.3",
     "express": "^4.17.1",
     "express-rate-limit": "7.4.1",
-    "gts": "^6.0.0",
     "instagram-private-api": "^1.46.1",
     "node-fetch": "^3.3.2",
     "tsx": "4.19.1"
@@ -24,7 +23,8 @@
     "@types/cors": "^2.8.13",
     "@types/escape-html": "^1.0.4",
     "@types/express": "^4.17.21",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "gts": "^6.0.0"
   },
   "typeRoots": [
     "./node_modules/@types",
